fix(ui): fix scrollbar style

--- a/src/client/ui/styles/theme.css
+++ b/src/client/ui/styles/theme.css
@@ -64,9 +64,13 @@ body {
 }
 
 .custom-scrollbar {
+  scroll-behavior: smooth;
+}
+
+/** In Chrome 121, support was added for scrollbar-color and scrollbar-width. If some of these properties are used, then ::-webkit-scrollbar will not work. */
+@supports not selector(::-webkit-scrollbar) .custom-scrollbar {
   scrollbar-width: auto;
   scrollbar-color: var(--color-accent) transparent;
-  scroll-behavior: smooth;
 }
 
 .custom-scrollbar::-webkit-scrollbar {
